--- a/sustercss.js.css
+++ b/sustercss.js.css
@@ -7,10 +7,10 @@
 }
 
 .header-logo2{
-  width: 170px !important;
-  height: 50px !important;
-  margin-top: 15px !important;
-  margin-left: auto !important;
+  width: 225px !important;
+  height: 65px !important;
+  margin-top: 10px !important;
+  margin-left: 40px !important;
   margin-right: auto !important;
 }
 
